Hiding collection when in Local view leaves object visible, but not selectable with mouse #72584

Closed
opened 2019-12-19 20:35:24 +01:00 by Stanislav Blinov · 22 comments

System Information
Operating system: Linux 5.4.2-arch1-1
Graphics card: GTX980Ti

Blender Version
Broken: 2.82 (66d773c2e7)

Short description of error
If you hide a collection an object is part of, and that object is currently in Local view, the object remains drawn in viewport, but cannot be (de-)selected with mouse in object mode, and, when switched to edit mode, none of the elements can be (de-)selected with mouse either.

Exact steps for others to reproduce the error

  1. Load default scene.
  2. Move Cube to a new collection.
  3. With Cube selected, switch to Local view
  4. Hide Cube's collection (e.g. with default keymap, press 1 to only show the default Collection)

Note that Cube is still visible, but you can't (de-)select it by clicking. If you enter edit mode, clicking on elements also does not (de-)select them.

**System Information** Operating system: Linux 5.4.2-arch1-1 Graphics card: GTX980Ti **Blender Version** Broken: 2.82 (66d773c2e7c595a65454ce1f0ca8f131a03125ed) **Short description of error** If you hide a collection an object is part of, and that object is currently in Local view, the object remains drawn in viewport, but cannot be (de-)selected with mouse in object mode, and, when switched to edit mode, none of the elements can be (de-)selected with mouse either. **Exact steps for others to reproduce the error** 1. Load default scene. 2. Move Cube to a new collection. 3. With Cube selected, switch to Local view 4. Hide Cube's collection (e.g. with default keymap, press 1 to only show the default Collection) Note that Cube is still visible, but you can't (de-)select it by clicking. If you enter edit mode, clicking on elements also does not (de-)select them.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

#79352 was marked as duplicate of this issue

#79352 was marked as duplicate of this issue

#78722 was marked as duplicate of this issue

#78722 was marked as duplicate of this issue

#76156 was marked as duplicate of this issue

#76156 was marked as duplicate of this issue

#76497 was marked as duplicate of this issue

#76497 was marked as duplicate of this issue

#75679 was marked as duplicate of this issue

#75679 was marked as duplicate of this issue

#74144 was marked as duplicate of this issue

#74144 was marked as duplicate of this issue
Germano Cavalcante changed title from Hiding collection when in Local view leaves object visible, but not selectale with mouse to Outliner: Hiding collection when in Local view leaves object visible, but not selectable with mouse 2019-12-20 17:48:18 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii I don't think this needs an "Outliner:" prefix.

@mano-wii I don't think this needs an "Outliner:" prefix.

This comment was removed by @mano-wii

*This comment was removed by @mano-wii*

It's about interaction of collection visibility and local view. AFAIK, outliner is only displaying the toggles. And it isn't even used in reproduction at all.

It's about interaction of collection visibility and local view. AFAIK, outliner is only displaying the toggles. And it isn't even used in reproduction at all.
Germano Cavalcante changed title from Outliner: Hiding collection when in Local view leaves object visible, but not selectable with mouse to Hiding collection when in Local view leaves object visible, but not selectable with mouse 2019-12-26 17:20:02 +01:00
Member

Added subscribers: @Mobin-2, @EAW

Added subscribers: @Mobin-2, @EAW

Added subscriber: @Pasang

Added subscriber: @Pasang

#75679 can be merged here.

#75679 can be merged here.
Member

Added subscribers: @Imaginer, @1D_Inc, @iss

Added subscribers: @Imaginer, @1D_Inc, @iss
Member

Added subscriber: @FrankieHobbins

Added subscriber: @FrankieHobbins

Added subscribers: @AlbertoVelazquez, @Alaska

Added subscribers: @AlbertoVelazquez, @Alaska

Added subscriber: @manzanilla

Added subscriber: @manzanilla
Manuel Castilla self-assigned this 2020-06-01 08:37:29 +02:00

Added subscriber: @Gilberto.R

Added subscriber: @Gilberto.R

Added subscriber: @Ipal

Added subscriber: @Ipal

This issue was referenced by 9bc1d7a6de

This issue was referenced by 9bc1d7a6deea8f401d727e80f42a04482c29bcef

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72584
No description provided.